package exceptions;

public class OperandNullException extends Exception
{
    public OperandNullException(String message)
    {
        super(message);
    }
}
