package model;

public enum Operations
{
    X,
    filler1,
    filler2,
    filler3,
    filler4,
    space ,
    Integration ,
    Division ,
    Addition ,
    Multiplication ,
    Subtraction ,
    Derivation


}
